# makis

./: Dockerfile  LICENSE  README.md  docker-compose.yml
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/makis/tankcontrol/: CameraFragment.java  ConnectActivity.java  ControlFragment.java  JoystickView.java  MainActivity.java  MapFragment.java  MapRenderView.java  RosBridgeClient.java
android/app/src/main/res/layout/: activity_connect.xml  activity_main.xml  fragment_camera.xml  fragment_control.xml  fragment_map.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
arduino/tank_firmware/: tank_firmware.ino
docker/: entrypoint.sh
docs/: wiring_diagram.md
ros2_ws/src/tank_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/tank_bringup/config/: ekf.yaml  nav2_params.yaml  slam_params.yaml
ros2_ws/src/tank_bringup/launch/: bringup.launch.py  slam_nav.launch.py
ros2_ws/src/tank_description/: CMakeLists.txt  package.xml
ros2_ws/src/tank_description/urdf/: tank.urdf.xacro
ros2_ws/src/tank_hardware/: package.xml  setup.cfg  setup.py
ros2_ws/src/tank_hardware/tank_hardware/: arduino_bridge_node.py
ros2_ws/src/tank_imu/: package.xml  setup.cfg  setup.py
ros2_ws/src/tank_imu/tank_imu/: imu_node.py
