<?xml version="1.0"?>
<package format="3">
  <name>tank_description</name>
  <version>1.0.0</version>
  <description>URDF and TF description for the Makis mecanum tank</description>
  <maintainer email="you@example.com">Makis Project</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
