<?xml version="1.0"?>
<package format="3">
  <name>tank_imu</name>
  <version>1.0.0</version>
  <description>I2C driver for LSM303DLHC (accel+mag) + L3GD20 (gyro)</description>
  <maintainer email="you@example.com">Makis Project</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
